# python-package-template

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: main.yml  pull-request.yml
main/: __version__.py
